# GraphicsCoursework

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cc
forms/: mainwindow.ui
gamma/: CMakeLists.txt
gamma/inc/: Integrator.h  Mathematics.h  MersenneTwisterGenerator.h  NormalDistributor.h  ParametricFunction.h  Random.h  RandomGenerator.h  SimpsonsRuleIntegrator.h
gamma/src/: MersenneTwisterGenerator.cc  NormalDistributor.cc  SimpsonsRuleIntegrator.cc
imagegenerator/: CMakeLists.txt
imagegenerator/inc/: ImageGenerator.h  PPMGenerator.h  PaintSurface.h  Painter.h  Pixel.h  Pixmap.h
imagegenerator/src/: PPMGenerator.cc  Painter.cc  Pixmap.cc  main.cc
inc/: Affine.h  Camera.h  Container.h  DrawingSurface.h  InputBuffer.h  Matrix.h  PerspectiveCube.h  Presenter.h  QImageBuffer.h  Scene.h  Utility.h  Vector.h  View.h  ViewObserver.h  mainwindow.h
inc/other/: specrend.h
report/: 00-abstract.tex  00-title.tex  12-intro.tex  20-analysis.tex  30-design.tex  40-impl.tex  50-research.tex  80-conclusion.tex  81-biblio.tex  rpz.tex
report/data/: plotfps.csv
report/graph/: idef0_rendering.graphml  idef0_simulation.graphml  mvp_uml.drawio  scheme_rendering.graphml  scheme_simulation.graphml  unnamed0.graphml
simulation/: CMakeLists.txt
simulation/inc/: Distributor.h  EGIntensityFunction.h  Galaxy.h  GalaxyObjectHandler.h  GalaxyProperties.h  Geometry.h  MersenneTwisterGenerator.h  SGCelestial.h  SGDiskIntensityFunction.h  SGDiskRadiusDistributor.h  SGHeightDistributor.h  SGIntensityFunction.h  SGIterator.h  SGObject.h  SGObjectHandler.h  SGOrbitCalculator.h  SGRadiusDistributor.h  SGStar.h  SGStarDescriptor.h  SGStarInitializer.h  SGVerticalDistributor.h  SpiralGalaxy.h
simulation/src/: EGIntensityFunction.cc  Galaxy.cc  MersenneTwisterGenerator.cc  SGCelestial.cc  SGDiskIntensityFunction.cc  SGDiskRadiusDistributor.cc  SGIntensityFunction.cc  SGIterator.cc  SGObjectHandler.cc  SGOrbitCalculator.cc  SGRadiusDistributor.cc  SGStar.cc  SGStarInitializer.cc  SGVerticalDistributor.cc  SpiralGalaxy.cc
src/: Camera.cc  DrawingSurface.cc  Matrix4d.cc  PerspectiveCube.cc  Presenter.cc  QImageBuffer.cc  Scene.cc  Vector2d.cc  Vector3d.cc  Vector4d.cc  View.cc  main.cc  mainwindow.cc
src/other/: specrend.cpp
